Add documentation and a writeup (#181)

--- a/doc/content/bib/magpie.bib
+++ b/doc/content/bib/magpie.bib
@@ -1,8 +1,37 @@
-
 @inproceedings{SchunertTREATHeatSource,
  author={S. Schunert and others},
  title={{Heat Source Characterization In A TREAT Fuel Particle Using Coupled Neutronics Binary Collision Monte-Carlo Calculations}},
  booktitle={{M\&C 2017 International Conference on Mathematics \& Computational Methods Applied to Nuclear Science \& Engineering}},
  month={April},
  year={2017}
+ }
+
+@Article{PC1980,
+  author   = {C.A. Coulter and D.M. Parkin},
+  title    = {Damage Energy Functions in Polyatomic Materials},
+  journal  = {Journal of Nuclear Materials},
+  year     = {1980},
+  volume   = {88},
+  number   = {1},
+  pages    = {249–260},
+}
+
+@Article{PC1981,
+  author   = {D.M. Parkin and C.A. Coulter},
+  title    = {Total and Net Displacement Functions for Polyatomic Materials},
+  journal  = {Journal of Nuclear Materials},
+  year     = {1981},
+  volume   = {101},
+  number   = {1},
+  pages    = {261–276},
+}
+
+@Article{HG1993,
+  author   = {H. Huang and N. Ghoniem},
+  title    = {Neutron Displacement Damage Cross Sections for SiC},
+  journal  = {Journal of Nuclear Materials},
+  year     = {1993},
+  volume   = {199},
+  number   = {1},
+  pages    = {221–230},
 }
