Add citation and update mytrim (#402)

--- a/doc/content/bib/magpie.bib
+++ b/doc/content/bib/magpie.bib
@@ -35,3 +35,19 @@
   number   = {1},
   pages    = {221–230},
 }
+
+@Article{Faust2002,
+  author="Faust, H.R.",
+  title="A model for fragment excitation and kinetic energy in nuclear fission",
+  journal="The European Physical Journal A - Hadrons and Nuclei",
+  year="2002",
+  month="Aug",
+  day="01",
+  volume="14",
+  number="4",
+  pages="459--468",
+  abstract="We present a model which allows for the calculation of fragment excitation and kinetic energy in nuclear fission. The model assumes that fission products are excited independently according to an exponential distribution function, which depends on the Q-value of the reaction and the level density parameter in the single fragment. We develop the model description and compare the results for different fissioning systems from actinium to fermium, and for different compound reactions, namely spontaneous fission, fission following thermal neutron capture, and high-energetic reactions with experimental data.",
+  issn="1434-601X",
+  doi="10.1140/epja/i2002-10028-6",
+  url="https://doi.org/10.1140/epja/i2002-10028-6"
+}
