Add empty action and start docs (#423)

--- a/doc/content/bib/magpie.bib
+++ b/doc/content/bib/magpie.bib
@@ -51,3 +51,32 @@
   doi="10.1140/epja/i2002-10028-6",
   url="https://doi.org/10.1140/epja/i2002-10028-6"
 }
+
+@article{Momeni2014,
+	title = {Propagating phase interface with intermediate interfacial phase: {Phase} field approach},
+	volume = {89},
+	issn = {1098-0121, 1550-235X},
+	shorttitle = {Propagating phase interface with intermediate interfacial phase},
+	url = {https://link.aps.org/doi/10.1103/PhysRevB.89.184102},
+	doi = {10.1103/PhysRevB.89.184102},
+	language = {en},
+	number = {18},
+	urldate = {2020-01-24},
+	journal = {Physical Review B},
+	author = {Momeni, Kasra and Levitas, Valery I.},
+	month = may,
+	year = {2014}}
+
+@article{Momeni2016,
+	title = {A phase-field approach to nonequilibrium phase transformations in elastic solids via an intermediate phase (melt) allowing for interface stresses},
+	volume = {18},
+	issn = {1463-9076, 1463-9084},
+	url = {http://xlink.rsc.org/?DOI=C6CP00943C},
+	doi = {10.1039/C6CP00943C},
+	language = {en},
+	number = {17},
+	urldate = {2020-01-24},
+	journal = {Physical Chemistry Chemical Physics},
+	author = {Momeni, Kasra and Levitas, Valery I.},
+	year = {2016},
+	pages = {12183--12203}}
