--- a/examples/polar_pfm/verification/verify.ipynb
+++ b/examples/polar_pfm/verification/verify.ipynb
@@ -23,7 +23,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def ffmpeg(basename, outname):\n",
@@ -34,7 +38,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def animate(directory, name):\n",
@@ -66,12 +74,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "animate(\"out\", \"run_1_1_out\")"
+    "# Steady State Interface Verification\n",
+    "\n",
+    "We first run the steady state input files using `magpie-opt`."
    ]
   },
   {
@@ -80,7 +88,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animate(\"out\", \"run_2_1_out\")"
+    "if os.system(\"../../../magpie-opt -i steady_theta.i\") or os.system(\"../../../magpie-opt -i steady_upsilon.i\"):\n",
+    "    print(\"Magpie run failed.\")    \n",
+    "else:\n",
+    "    print(\"Success.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we generate two movies showing how the linear ramp converges to teh analytical steady state solution."
    ]
   },
   {
@@ -89,239 +107,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animate(\"out\", \"run_4_1_out\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "animate(\"out\", \"run_8_1_out\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "animate(\"out\", \"run_2_0.1_out\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "animate(\"out\", \"run_4_2_out\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "animate(\"out\", \"run_2.0_2.0_432_out\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "animate(\"out\", \"run_2.0_1.2_432_out\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_limits(a1, a2, t):\n",
-    "    # error check\n",
-    "    if len(a1) != len(a2):\n",
-    "        return None\n",
-    "    \n",
-    "    l0 = None\n",
-    "    l1 = None\n",
-    "    # lower limit\n",
-    "    if a2[0] > t:\n",
-    "        l0 = a1[0]\n",
-    "    else:\n",
-    "        for i in range(len(a1)-1):\n",
-    "            if a2[i+1] > t:\n",
-    "                f = (t-a2[i])/(a2[i+1]-a2[i])\n",
-    "                l0 = f*(a1[i+1]-a1[i]) + a1[i]\n",
+    "def steady_anim(var, T, ycols):\n",
+    "    tmp = tempfile.mkdtemp()\n",
+    "    #patterns = [\"out/steady_theta_2.0_2.0_432_sol_%04d.csv\", \"out/steady_theta_2.0_2.0_432_ana_%04d.csv\"]\n",
+    "    #patterns = [\"out/steady_upsilon_2.0_2.0_532.14_sol_%04d.csv\", \"out/steady_upsilon_2.0_2.0_532.14_ana_%04d.csv\"]\n",
+    "    #patterns = [\"out/steady_%s_2.0_2.0_%s_sol_%04d.csv\", \"out/steady_%s_2.0_2.0_%s_ana_%04d.csv\"]\n",
+    "    patterns = [\"out/steady_%s_2.2_1_%s_sol_%04d.csv\", \"out/steady_%s_2.2_1_%s_ana_%04d.csv\"]\n",
+    "\n",
+    "\n",
+    "    xcols = ['x', 'x']\n",
+    "    labels = ['numerical', 'analytical']\n",
+    "    line = ['-r', '--b']\n",
+    "\n",
+    "    png = \"out_\" + var + \"_%04d.png\"\n",
+    "    mp4 = \"steady_\" + var + \".mp4\"\n",
+    "    n = 1\n",
+    "\n",
+    "    while True:\n",
+    "        d = []\n",
+    "        for p in patterns:\n",
+    "            file = p % (var, T, n)\n",
+    "            print(file)\n",
+    "            if not os.path.isfile(file):\n",
     "                break\n",
-    "    #upper limit\n",
-    "    if a2[-1] > t:\n",
-    "        l1 = a1[-1]\n",
-    "    else:\n",
-    "        for i in range(len(a1)-1):\n",
-    "            if a2[-2-i] > t:\n",
-    "                f = (t-a2[-1-i])/(a2[-2-i]-a2[-1-i])\n",
-    "                l1 = f*(a1[-2-i]-a1[-1-i]) + a1[-1-i]\n",
-    "                break\n",
+    "            # load data\n",
+    "            d.append(pd.read_csv(file))\n",
+    "        else:\n",
+    "            # do all work with loaded data\n",
+    "            print(\"render\")\n",
+    "            n += 1\n",
     "\n",
-    "    # return limits\n",
-    "    if l0 is None or l1 is None:\n",
-    "        return None\n",
-    "    return (l0, l1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_files(files):\n",
-    "    files.sort()\n",
+    "            fig = plt.figure(figsize=(12,9))\n",
+    "            ax = fig.gca()\n",
+    "            for i in range(len(d)):\n",
+    "                ax.plot(d[i][xcols[i]], d[i][ycols[i]], line[i],linewidth=3.0, label=labels[i])\n",
     "\n",
-    "    fig = plt.figure(figsize=(12,9))\n",
-    "    ax = fig.gca()\n",
-    "    ax.set_xlabel('Position')\n",
-    "    ax.xlim(12,18)\n",
+    "            #         plt.title(name)\n",
+    "            ax.legend(loc='center right')\n",
+    "            ax.set_xlabel('Position')\n",
+    "            \n",
+    "            outfile = os.path.join(tmp, png % n)\n",
+    "            plt.savefig(outfile, dpi=150, bbox_inches='tight')\n",
+    "            plt.close('all')\n",
     "\n",
-    "    for file in files:\n",
-    "        df = pd.read_csv(file)\n",
-    "        x = df['x']\n",
-    "        ax.plot(x,df['Upsilon'], '-', linewidth=3.0, label=file)\n",
-    "        ax.plot(x,df['theta'], '.', linewidth=3.0, label=file)\n",
-    "        ax.legend(loc='center right')\n",
-    "        \n",
-    "#     plt.savefig(os.path.join(tmp, base[:-3] + \"png\"), dpi=150, bbox_inches='tight')\n",
-    "#     plt.close('all')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_glob(g):\n",
-    "    files = glob.glob(g)\n",
-    "    plot_files(files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_files([\"out/run_2.0_1.2_432_out_0042.csv\", \"out/run_2.0_2.0_432_out_0038.csv\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# animation\n",
-    "tmp = tempfile.mkdtemp()\n",
-    "print (tmp)\n",
+    "            continue\n",
+    "        break\n",
     "\n",
-    "# animation 2\n",
-    "for frame in range(235):\n",
-    "    marmot = np.transpose(np.loadtxt(\"multiphase_diffusion2_out_var_%04d.csv\" % frame, delimiter=\",\", skiprows=1))\n",
-    "    fig = plt.figure(figsize=(12,9))\n",
-    "    ax = fig.gca()\n",
-    "    # phases\n",
-    "    ax.plot(marmot[0],marmot[9], 'r-',linewidth=3.0, label=r'$\\eta_1$ $\\delta$-UZr')\n",
-    "    ax.plot(marmot[0],marmot[10], 'g-',linewidth=3.0, label=r'$\\eta_2$ $\\alpha$-U')\n",
-    "    ax.plot(marmot[0],marmot[11], 'b-',linewidth=3.0, label=r'$\\eta_3$ $\\alpha$-Zr')\n",
-    "    # ranges\n",
-    "    #     range_delta = find_limits(marmot[0], marmot[9], 0.5)\n",
-    "    #     range_U     = find_limits(marmot[0], marmot[10], 0.5)\n",
-    "    #     range_Zr    = find_limits(marmot[0], marmot[11], 0.5)\n",
-    "    #     if range_delta is not None:\n",
-    "    #         ax.axvspan(range_delta[0], range_delta[1], alpha=0.25, color='red')\n",
-    "    #     if range_U is not None:\n",
-    "    #         ax.axvspan(range_U[0], range_U[1], alpha=0.25, color='green')\n",
-    "    #     if range_Zr is not None:\n",
-    "    #         ax.axvspan(range_Zr[0], range_Zr[1], alpha=0.25, color='blue')\n",
-    "    # concentrations\n",
-    "    ax.plot(marmot[0],marmot[8], 'y-',linewidth=3.0, label='c')\n",
-    "    ax.plot(marmot[0],marmot[4], 'r--',linewidth=3.0, label=r'$c_{1a}$')\n",
-    "    ax.plot(marmot[0],marmot[5], 'b--',linewidth=3.0, label=r'$c_{1b}$')\n",
-    "    plt.title(r'UZr $\\delta$-phase growth')\n",
-    "    plt.xlim(-24.5,24.5)\n",
-    "    ax.legend(loc='upper left', bbox_to_anchor=(0.05,0.9))\n",
-    "    ax.set_xlabel('Position')\n",
-    "    ax.set_ylabel('Order parameter')\n",
-    "    plt.savefig(os.path.join(tmp, \"multiphase_diffusion2_out2_var_%04d.png\" % frame), dpi=150, bbox_inches='tight')\n",
-    "    plt.close('all')\n",
+    "    # make video\n",
+    "    cmd = \"ffmpeg -y -i %s -vf \\\"scale=trunc(iw/2)*2:trunc(ih/2)*2\\\" -pix_fmt yuv420p %s\" % (os.path.join(tmp, png), mp4)\n",
+    "    os.system(cmd)\n",
     "\n",
-    "# make video\n",
-    "#ffmpeg(os.path.join(tmp, \"multiphase_diffusion2_out2_var\"), \"multiphase_diffusion2_phases.mp4\")\n",
-    "             \n",
-    "# cleanup\n",
-    "#shutil.rmtree(tmp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp = tempfile.mkdtemp()\n",
-    "#patterns = [\"out/steady_theta_2.0_2.0_432_sol_%04d.csv\", \"out/steady_theta_2.0_2.0_432_ana_%04d.csv\"]\n",
-    "patterns = [\"out/steady_upsilon_2.0_2.0_532.14_sol_%04d.csv\", \"out/steady_upsilon_2.0_2.0_532.14_ana_%04d.csv\"]\n",
-    "\n",
-    "\n",
-    "xcols = ['x', 'x']\n",
-    "# ycols = ['theta', 'theta']\n",
-    "ycols = ['Upsilon', 'Upsilon']\n",
-    "labels = ['numerical', 'analytical']\n",
-    "line = ['-r', '--b']\n",
-    "\n",
-    "png = \"out_%04d.png\"\n",
-    "mp4 = \"steady2.mp4\"\n",
-    "n = 1\n",
-    "\n",
-    "while True:\n",
-    "    d = []\n",
-    "    for p in patterns:\n",
-    "        file = p % n\n",
-    "        if not os.path.isfile(file):\n",
-    "            break\n",
-    "        # load data\n",
-    "        d.append(pd.read_csv(file))\n",
-    "    else:\n",
-    "        # do all work with loaded data\n",
-    "        print(\"render\")\n",
-    "        n += 1\n",
-    "\n",
-    "        fig = plt.figure(figsize=(12,9))\n",
-    "        ax = fig.gca()\n",
-    "        for i in range(len(d)):\n",
-    "            ax.plot(d[i][xcols[i]], d[i][ycols[i]], line[i],linewidth=3.0, label=labels[i])\n",
+    "    # cleanup\n",
+    "    shutil.rmtree(tmp)\n",
     "    \n",
-    "        #         plt.title(name)\n",
-    "        ax.legend(loc='center right')\n",
-    "        ax.set_xlabel('Position')\n",
-    "        plt.savefig(os.path.join(tmp, png % n), dpi=150, bbox_inches='tight')\n",
-    "        plt.close('all')\n",
+    "steady_anim('theta', '432', ['theta', 'theta'])\n",
+    "steady_anim('upsilon', '532.14', ['Upsilon', 'Upsilon'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interface Velocity Verification\n",
     "\n",
-    "        continue\n",
-    "    break\n",
-    "        \n",
-    "# make video\n",
-    "cmd = \"ffmpeg -y -i %s -vf \\\"scale=trunc(iw/2)*2:trunc(ih/2)*2\\\" -pix_fmt yuv420p %s\" % (os.path.join(tmp, png), mp4)\n",
-    "os.system(cmd)\n",
-    "\n",
-    "# cleanup\n",
-    "shutil.rmtree(tmp)"
+    "We first run the velocity input files using `magpie-opt`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for var in ['upsilon', 'theta']:\n",
+    "    for T in range(392, 542,10):\n",
+    "        print(var, T)\n",
+    "        os.system(\"../../../magpie-opt -i velocity_%s.i Temp_=%d KE=1.933\" % (var, T))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we collect the PostProcessor CSV files and extract the numerical interface velocity as `dpos/dt` and the analytically computed interface velocity `vanalytic`. The latter is computed in the input uisng a Function and a FunctionValuePostprocessor. The value is constant over time."
    ]
   },
   {
@@ -378,6 +246,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we take a look at the interface velocity data from every timestep in the `theta` and `Upsilon` runs. We need to make sure that the velocity converges to a constant value."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -420,12 +295,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we look at the `theta` and `Upsilon` interface profiles to verify that we have the expected clean interfaces. Change the temperature value `T` to look at different runs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files1 = glob.glob(\"out/velocity_theta_1.933_1_392_op_*.csv\")\n",
+    "T = 392\n",
+    "files1 = glob.glob(\"out/velocity_theta_1.933_1_%d_op_*.csv\" % T)\n",
     "files1.sort()\n",
     "\n",
     "fig = plt.figure(figsize=(22,9))\n",
@@ -443,7 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files1 = glob.glob(\"out/velocity_upsilon_1.933_1_392_op_*0.csv\")\n",
+    "T = 392\n",
+    "files1 = glob.glob(\"out/velocity_upsilon_1.933_1_%d_op_*0.csv\" % T)\n",
     "files1.sort()\n",
     "\n",
     "fig = plt.figure(figsize=(22,9))\n",
